<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservesFragment"
    android:padding="10dp"
    android:background="#FFFFFF">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/textFecha"
        android:paddingTop="40dp"
        />
<EditText
    android:layout_width="200dp"
    android:layout_height="40dp"
    android:layout_marginTop="40dp"
    android:layout_marginLeft="90dp"
    android:id="@+id/fechaReserva"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/textComensales"
        android:paddingTop="80dp"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="90dp"
        android:id="@+id/ComensalesReserva"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/textNombre"
        android:paddingTop="120dp"/>
    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="90dp"
        android:id="@+id/nombreReserva"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/textTelef"
        android:paddingTop="160dp"
        />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="90dp"
        android:id="@+id/telefReserva"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="200dp"
        android:text="@string/textComentarios" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="220dp"
        android:id="@+id/comentarioReserva"/>


</FrameLayout>